Tweak preferences content

--- a/app/views/ucas-apply-preferences.html
+++ b/app/views/ucas-apply-preferences.html
@@ -22,8 +22,14 @@
 
   <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
+      <p>These are UCAS Teacher Training (UTT) Apply preferences that relate to:</p>
 
-      <p>These preferences were available in UCAS NetUpdate, for most providers they were configured when they began offering teacher training courses.</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>what happens when you receive an application</li>
+        <li>what you need to do after accepting an application</li>
+      </ul>
+
+      <p>For most providers they were configured using UCAS NetUpdate when they began offering teacher training courses.</p>
 
       <p><a href="#">Get in touch with the Becoming a Teacher team</a> to change any of these preferences.</p>
 
@@ -51,11 +57,19 @@
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l" />
 
-      <h2 class="govuk-heading-m">How should your outstanding decisions list (ODL) be sorted?</h2>
+      <h2 class="govuk-heading-m">How should applicants be sorted in your outstanding decisions list (ODL)?</h2>
 
       <p class="govuk-inset-text">Alphabetically</p>
 
       <p>You will find your outstanding decisions list in the applicant data section of UCAS web-link.</p>
+
+      <p>There are outstanding decisions lists for applicants:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>awaiting a decision from you (On-demand ODL)</li>
+        <li>who will be rejected by default over the next 7 days (Weekly ODL)</li>
+        <li>who have accepted conditional offers but are awaiting confirmation decisions (Confirmation ODL)</li>
+      </ul>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l" />
 
