Tweak to content
https://docs.google.com/document/d/1hiGCC6EdSkjFieEGBRgBW0aNgCRti1sNXlyvgxpm204/

--- a/app/views/location.html
+++ b/app/views/location.html
@@ -70,7 +70,7 @@
 
         {% set fields = [
             {
-              name: 'I confirm that candidates can choose this as a place of training when they complete their UCAS application form'
+              name: 'I confirm that candidates can choose this as a place of training when completing the UCAS application form'
             }
           ]
         %}
