--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -62,7 +62,7 @@
       <p>In this section, you can add and edit information about your locations.</p>
 
       <div class="govuk-inset-text">
-        <p>By ‘locations’ we mean the places that a candidate can select when making their application - choosing from the list that will appear on the course page in Find and on the UCAS application form.</p>
+        <p>By ‘location’ we mean the places that a candidate selects when making an application. They do this by choosing from a list on both the course page in Find and the UCAS application form.</p>
 
         <p><a href="#">Guidance on setting up your locations</a></p>
       </div>
