--- a/app/views/onboarding/accept-terms.html
+++ b/app/views/onboarding/accept-terms.html
@@ -13,7 +13,7 @@
 
       <p>These set out your responsibilities when publishing content to Publish teacher training courses. This includes making sure your content:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>is relevant to the service and accurate</li>
+        <li>is accurate, and relevant to the service</li>
         <li>is not offensive, inappropriate or discriminatory</li>
         <li>belongs to you</li>
       </ul>
