--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -78,7 +78,7 @@
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>manage the locations candidates select from when they apply</li>
+          <li>manage the locations that candidates select when applying</li>
           <li>edit location names and addresses</li>
           <li>add locations</li>
         </ul>
