--- a/app/views/ucas-apply-preferences.html
+++ b/app/views/ucas-apply-preferences.html
@@ -29,9 +29,7 @@
         <li>what you need to do after accepting an application</li>
       </ul>
 
-      <p>For most providers they were configured using UCAS NetUpdate when they began offering teacher training courses.</p>
-
-      <p><a href="#">Get in touch with the Becoming a Teacher team</a> to change any of these preferences.</p>
+      <p>Your preferences are listed below. <a href="#">Get in touch with the Becoming a Teacher team</a> to change any of them.</p>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l" />
 
