--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -35,19 +35,21 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if not data['rolled-over'] %}
-        <div class="govuk-!-margin-bottom-8">
+        <div class="govuk-!-margin-bottom-8" style="border-left: 10px solid #bfc1c3; padding: 15px">
           <h2 class="govuk-heading-m">
-            <a href="/rollover/start">Prepare for the 2020/2021 recruitment cycle</a>
+            <a href="/rollover/start">Rollover your courses and locations</a>
           </h2>
           <p>Use this section to:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>choose courses for the next cycle</li>
             <li>choose training locations for the next cycle</li>
           </ul>
+          <div style="margin-bottom: -25px">
           {{ govukWarningText({
-              text: 'Complete before 1 June',
+              text: 'We recommend starting rollover early',
               iconFallbackText: 'Warning'
           }) }}
+          </div>
         </div>
       {% endif %}
 
