--- a/app/views/onboarding/apply-settings.html
+++ b/app/views/onboarding/apply-settings.html
@@ -10,7 +10,7 @@
         {{ title }}
       </h1>
 
-      <p class="govuk-body-l">The next questions will set some preferences for the UCAS Teacher Training (UTT) Apply system.</p>
+      <p class="govuk-body-l">The next questions will set some preferences for the UCAS Teacher Training Apply (UTT Apply) system.</p>
 
       <hr class="govuk-section-break govuk-section-break--l">
 
