--- a/app/views/onboarding/gt12.html
+++ b/app/views/onboarding/gt12.html
@@ -10,7 +10,7 @@
         {{ title }}
       </h1>
 
-      <p>UCAS sends all successful applicants a letter - this is known as a ‘GT12 letter’.</p>
+      <p>UCAS sends all successful applicants a letter – this is known as a ‘GT12 letter’.</p>
       <p class="govuk-!-margin-bottom-5">Choose which letter you’d like UCAS to send (the full text of each letter is included below):</p>
 
       {% set confirmLetter %}
