Tweak GT12 content

--- a/app/views/onboarding/gt12.html
+++ b/app/views/onboarding/gt12.html
@@ -11,11 +11,10 @@
       </h1>
 
       <p>UCAS sends all successful applicants a letter – this is known as a ‘GT12 letter’.</p>
-      <p class="govuk-!-margin-bottom-5">Choose which letter you’d like UCAS to send (the full text of each letter is included below):</p>
+      <p class="govuk-!-margin-bottom-5">Choose which letter you’d like UCAS to send (the content of each letter is summarised below):</p>
 
       {% set confirmLetter %}
         <div class="status-box" style="border: none">
-          <p>Dear [applicant],</p>
           <p>
             To confirm whether or not you intend to take up this place,
             you must contact the training provider at [GT12 reply email
@@ -36,7 +35,6 @@
 
       {% set noResponseLetter %}
         <div class="status-box" style="border: none">
-          <p>Dear [applicant],</p>
           <p class="govuk-!-margin-bottom-0">{{ data['training-provider-name'] }} will assume you are taking up your place, and will be sending you joining instructions before you start your training programme.</p>
         </div>
       {% endset %}
