--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -100,6 +100,18 @@
         {% endif %}
         {{ macros.coursePart('training-with-a-disability', 'Training with disabilities and other needs', errors) }}
       </dl>
+
+      <h3 class="govuk-heading-27">
+        <a href="/about-your-organisation/ucas-apply-preferences">
+          UCAS Apply preferences
+        </a>
+      </h3>
+
+      <dl class="govuk-summary-list govuk-summary-list--short">
+        {{ macros.coursePart('ucas-gt12', 'Letter sent to applicants', errors) }}
+        {{ macros.coursePart('ucas-gt12-address', 'Email applicants respond to', errors) }}
+        {{ macros.coursePart('ucas-alerts', 'Email alerts for new applications', errors) }}
+      </dl>
     </div>
     <div class="govuk-grid-column-one-third">
       {% set publishState = publishState or data['about-your-organisation-publish-state'] or 'new' %}
