--- a/app/views/onboarding/alerts.html
+++ b/app/views/onboarding/alerts.html
@@ -11,18 +11,7 @@
       </h1>
 
       <form action="{{ paths.next }}" method="post">
-        {% set fields = [
-            {
-              name: 'Get an email for each application you receive',
-              more: macros.textbox('email-to', 'Email address UCAS should send alerts to')
-            },
-            {
-              name: 'Don’t get an email'
-            }
-          ]
-        %}
-
-        {{ macros.radioGroup('alerts', fields) }}
+        {% include "ucas/_alerts.html" %}
 
         <div class="form-group">
           <input type="submit" class="govuk-button" value="Continue">
