--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -106,6 +106,16 @@
         </h2>
         <p>Request a DfE Sign-in account for others who manage your courses.</p>
       </div>
+      <div class="govuk-!-margin-bottom-8">
+        <h2 class="govuk-heading-m">
+          <a href="/ucas/apply-preferences">UCAS Apply preferences</a>
+        </h2>
+        <p>These are preferences that relate to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>what applicants receive when they are successful</li>
+          <li>what happens when you receive an application</li>
+        </ul>
+      </div>
     </div>
     <!-- <div class="govuk-grid-column-one-third">
       <div class="status-box">
