Start with some UCAS values for research

--- a/app/views/ucas/_alerts.html
+++ b/app/views/ucas/_alerts.html
@@ -1,7 +1,7 @@
 {% set fields = [
     {
       name: 'Get an email for each application you receive',
-      more: macros.textbox('email-to', 'Email address UCAS should send alerts to')
+      more: macros.textbox('ucas-alert-email-to', 'Email address UCAS should send alerts to')
     },
     {
       name: 'Don’t get an email'
