Tweak UCAS content

--- a/app/views/onboarding/gt12.html
+++ b/app/views/onboarding/gt12.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Pick which letter to send to successful applicants' %}
+{% set title = 'Pick a letter for successful applicants' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
