--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -112,7 +112,7 @@
         </h2>
         <p>These are preferences that relate to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>what applicants receive when they are successful</li>
+          <li>what UCAS sends to successful applicants</li>
           <li>what happens when you receive an application</li>
         </ul>
       </div>
