--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -13,14 +13,14 @@
       <p>These are UCAS Teacher Training (UTT) Apply preferences that relate to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>what applicants receive when they are successful</li>
+        <li>what UCAS sends to successful applicants</li>
         <li>what happens when you receive an application</li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--l" />
 
       <form action="/" method="post">
-        <h2 class="govuk-heading-l">Pick which letter to send to successful applicants</h2>
+        <h2 class="govuk-heading-l">Pick a letter for successful applicants</h2>
 
         {% include "ucas/_gt12.html" %}
 
