--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -35,7 +35,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if not data['rolled-over'] %}
-        <div class="govuk-!-margin-bottom-8" style="border-left: 10px solid #bfc1c3; padding: 15px">
+        <div class="govuk-!-margin-bottom-8">
           <h2 class="govuk-heading-m">
             <a href="/rollover/start">Rollover your courses and locations</a>
           </h2>
@@ -44,12 +44,10 @@
             <li>choose courses for the next cycle</li>
             <li>choose training locations for the next cycle</li>
           </ul>
-          <div style="margin-bottom: -25px">
           {{ govukWarningText({
               text: 'We recommend starting rollover early',
               iconFallbackText: 'Warning'
           }) }}
-          </div>
         </div>
       {% endif %}
 
