Add "all" to title
Try to hint that you can select multiple.

--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -1,4 +1,4 @@
-{% set title %}Pick the languages for this course{% endset %}
+{% set title %}Pick all the languages for this course{% endset %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
