Tweak content from preferences to settings

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -106,12 +106,13 @@
       </div>
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/ucas/apply-preferences">UCAS Apply preferences</a>
+          <a href="/ucas/apply-preferences">UCAS Apply settings</a>
         </h2>
-        <p>These are preferences that relate to:</p>
+        <p>These are settings that relate to:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>what UCAS sends to successful applicants</li>
           <li>what happens when you receive an application</li>
+          <li>who UCAS can contact</li>
         </ul>
       </div>
     </div>
