--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS Apply preferences' %}
+{% set title = 'UCAS Apply settings' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink('/') }}{% endblock %}
 
