Add withdraw design

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -218,12 +218,12 @@
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
-      <h3 class="govuk-heading-s">Withdraw course</h3>
+      <h3 class="govuk-heading-m">Withdraw</h3>
 
       <p>Remove this course from Find and close applications.</p>
 
       <p class="remove-bottom-margin">
-        <a href="/withdraw/{{ linkPath }}">Withdraw course</a>
+        <a href="/course/{{ linkPath }}/withdraw">Withdraw course</a>
       </p>
     {% endif %}
   </div>
