Tweak withdrawal content

--- a/app/views/course/withdraw.html
+++ b/app/views/course/withdraw.html
@@ -12,13 +12,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form action="{{ course.path }}/vacancies" method="post">
-        <p>Withdrawing a course:</p>
+        <p>Withdrawing this course will:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>immediately removes it from Find</li>
-          <li>closes applications for it (this happens when UCAS Apply updates overnight)</li>
+          <li>immediately remove it from Find</li>
+          <li>close applications for it (this happens when UCAS Apply updates overnight)</li>
         </ul>
 
-        <p>Once you’ve withdrawn a course, you can’t publish it again.</p>
+        <p>Once you’ve withdrawn a course, you can’t publish it again this cycle.</p>
 
         <hr class="govuk-section-break govuk-section-break--m">
 
