--- a/app/views/course/delete.html
+++ b/app/views/course/delete.html
@@ -11,7 +11,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="{{ course.path }}/vacancies" method="post">
+      <form action="{{ course.path }}/delete" method="post">
         <p>You can only delete a course if it hasn’t been published in this cycle.</p>
 
         <p>Delete a course if it:</p>
