Tweak delete content

--- a/app/views/course/delete.html
+++ b/app/views/course/delete.html
@@ -14,13 +14,13 @@
       <form action="{{ course.path }}/delete" method="post">
         <p>You can only delete a course if it hasn’t been published in this cycle.</p>
 
-        <p>Delete a course if it:</p>
+        <p>Delete a course if you:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>was created by mistake</li>
-          <li>will never be offered again</li>
+          <li>created it by mistake</li>
+          <li>won’t offer it again</li>
         </ul>
 
-        <p>Deleting a course removes it from your Courses table. It cannot be undone. If you need to recreate a course it will have a new course code.</p>
+        <p>Deleting a course is permanent - you can’t undo it. If you need to recreate a course after deleting it, it will have a new course code.</p>
 
         <hr class="govuk-section-break govuk-section-break--m">
 
